fixed height and alignation bug

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -48,7 +48,7 @@ body {
   background-color: $bgcTwo;
 }
 #Skills {
-  height: 100vh;
+  height: 100%;
   background-color: $bgcOne;
 }
 #ShowCase {
