--- a/src/styles/Skills.scss
+++ b/src/styles/Skills.scss
@@ -3,8 +3,8 @@
   .container {
     height: 100%;
     width: 100%;
+    justify-content: center;
     padding: 50px;
-    padding-left: 150px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 300px));
     gap: 300px;
@@ -19,7 +19,7 @@
         rgba(0, 0, 0, 0.22) 0px 10px 10px;
       border-radius: 10px;
       transition: all 200ms ease-in-out;
-
+      cursor: pointer;
       svg {
         justify-self: center;
         height: 40px;
